syntax = "proto3";

package betting.example;

import "common.proto";
import "bet.proto";

service UserService {
    rpc UserRegister (UserAuthRequest) returns (SuccessResponse);
    rpc UserMe (UserIdentityRequest) returns (User);
}

message User {
    string id = 1;
    float balance = 2;
    string username = 3;
    repeated Bet bets = 4;
}

message UserIdentityRequest {
    string username = 1;
}

message UserAuthRequest {
    string username = 1;
}
